--- a/templates/run.html
+++ b/templates/run.html
@@ -27,7 +27,10 @@
     <h2 class="reduceTopMargin">tk_run_runner's run</h2>
     <div class="runContainer">
         <p>lk_run_duration (rank #lk_run_place)</p>
-        <p class="reduceTopMargin">lk_run_link</p>
+        <video width="723" height="409" controls>
+            <source src="lk_run_link">
+        </video><br><br>
+        <p class="reduceTopMargin"><a class="runLink" href="lk_run_link">Raw video file</a></p>
     </div>
     <p class="runDescription"><em>tk_run_description</em></p>
     <p>Verified by <strong>tk_run_verifier</strong> - Took place on <strong>tk_run_date</strong></p>
