YouTube embed works now
- Changed the runs template (Added lk_run_video)
- Also changed the scripts/utils/gen/runs.py (Todo: Optimize later)
- Slightly modified csv/runs.csv for YouTube videos
- Regenerated runs

--- a/templates/run.html
+++ b/templates/run.html
@@ -27,9 +27,8 @@
     <h2 class="reduceTopMargin">tk_run_runner's run</h2>
     <div class="runContainer">
         <p>lk_run_duration (rank #lk_run_place)</p>
-        <video width="723" height="409" controls>
-            <source src="lk_run_link">
-        </video><br><br>
+        lk_run_video
+        <br><br>
         <p class="reduceTopMargin"><a class="runLink" href="lk_run_link">Raw video file</a></p>
     </div>
     <p class="runDescription"><em>tk_run_description</em></p>
