--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 <body>
     <h1>tk_game_name</h1>
     <h2 class="reduceTopMargin">Speedruns</h2>
-    <p>tk_game_description</p>
+    <p style="text-align: center;">tk_game_description</p>
 
     <h2>Categories</h2>
     <div class="reduceTopMargin" style="text-align: center;">lk_categories</div>
