--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="tk_game_name - Speedruns Leaderboard" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="tk_game_description" />
+    <meta property="og:description" content="tk_meta_description" />
     <meta property="og:url" content="tk_url" />
     <meta property="og:image" content="https://tk_url/assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://tk_url/assets/img/logo.png" />
